loki_template.yaml
---
# Source: loki/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: markwalle-loki
  labels:
    app: loki
    chart: loki-0.8.4
    release: markwalle-loki
    heritage: Tiller
  annotations:
    {}

spec:
  type: ClusterIP
  ports:
    - port: 3100
      protocol: TCP
      name: http-metrics
      targetPort: http-metrics
  selector:
    app: loki
    release: markwalle-loki

---
# Source: loki/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: markwalle-loki
  labels:
    app: loki
    chart: loki-0.8.4
    release: markwalle-loki
    heritage: Tiller
  annotations:
    {}

spec:
  replicas: 1
  minReadySeconds: 0
  selector:
    matchLabels:
      app: loki
      release: markwalle-loki
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: loki
        name: loki
        release: markwalle-loki
      annotations:
        checksum/config: 110baa76614f67dfb53da8f999a3854b252a21c1824de76f26c186f7d97c5b5d
        prometheus.io/port: http-metrics
        prometheus.io/scrape: "true"

    spec:
      serviceAccountName: default
      # securityContext:
      #   fsGroup: 10001
      #   runAsGroup: 10001
      #   runAsNonRoot: true
      #   runAsUser: 10001

      containers:
        - name: loki
          image: "grafana/loki:latest"
          imagePullPolicy: Always
          args:
            - "-config.file=/etc/loki/loki.yaml"
          volumeMounts:
            - name: config
              mountPath: /etc/loki
            - name: storage
              mountPath: "/data"
              subPath:
          ports:
            - name: http-metrics
              containerPort: 3100
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 45

          readinessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 45

          resources:
            {}

          securityContext:
            readOnlyRootFilesystem: true
      nodeSelector:
        {}

      affinity:
        {}

      tolerations:
        []

      terminationGracePeriodSeconds: 30
      volumes:
        - name: config
          secret:
            secretName: markwalle-loki
        - name: storage
          emptyDir: {}


---
# Source: loki/templates/networkpolicy.yaml

---
# Source: loki/templates/pdb.yaml

---
# Source: loki/templates/podsecuritypolicy.yaml



---
# Source: loki/templates/pvc.yaml


---
# Source: loki/templates/role.yaml



---
# Source: loki/templates/rolebinding.yaml



---
# Source: loki/templates/serviceaccount.yaml
