mark-walle-prometheus.yaml
---
# Source: prometheus/templates/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: "mark-walle-prometheus"
    app: prometheus
    release: mark-walle-prometheus
    chart: prometheus-8.11.4
    heritage: Tiller
  name: mark-walle-prometheus-mark-walle-prometheus
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9090
  selector:
    component: "mark-walle-prometheus"
    app: prometheus
    release: mark-walle-prometheus
  type: "ClusterIP"

---
# Source: prometheus/templates/server-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    component: "mark-walle-prometheus"
    app: prometheus
    release: mark-walle-prometheus
    chart: prometheus-8.11.4
    heritage: Tiller
  name: mark-walle-prometheus-mark-walle-prometheus
spec:
  selector:
    matchLabels:
      component: "mark-walle-prometheus"
      app: prometheus
      release: mark-walle-prometheus
  replicas: 1
  template:
    metadata:
      labels:
        component: "mark-walle-prometheus"
        app: prometheus
        release: mark-walle-prometheus
        chart: prometheus-8.11.4
        heritage: Tiller
    spec:
      serviceAccountName: default
      # initContainers:
      # - name: "init-chown-data"
      #   image: "busybox:latest"
      #   imagePullPolicy: "IfNotPresent"
      #   resources:
      #     {}
      #
      #   # 65534 is the nobody user that prometheus uses.
      #   command: ["chown", "-R", "65534:65534", "/data"]
      #   volumeMounts:
      #   - name: storage-volume
      #     mountPath: /data
      #     subPath: ""
      containers:
        - name: prometheus-mark-walle-prometheus-configmap-reload
          image: "jimmidyson/configmap-reload:v0.2.2"
          imagePullPolicy: "IfNotPresent"
          args:
            - --volume-dir=/etc/config
            - --webhook-url=http://127.0.0.1:9090/-/reload
          resources:
            {}

          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
              readOnly: true

        - name: prometheus-mark-walle-prometheus
          image: "prom/prometheus:v2.9.2"
          imagePullPolicy: "IfNotPresent"
          args:
            - --config.file=/etc/config/prometheus.yml
            - --storage.tsdb.path=/data
            - --web.console.libraries=/etc/prometheus/console_libraries
            - --web.console.templates=/etc/prometheus/consoles
            - --web.enable-lifecycle
          ports:
            - containerPort: 9090
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9090
            initialDelaySeconds: 30
            timeoutSeconds: 30
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
            initialDelaySeconds: 30
            timeoutSeconds: 30
          resources:
            {}

          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
            - name: storage-volume
              mountPath: /data
              subPath: ""
      terminationGracePeriodSeconds: 300
      volumes:
        - name: config-volume
          configMap:
            name: mark-walle-prometheus-mark-walle-prometheus
        - name: storage-volume
          persistentVolumeClaim:
            claimName: mark-walle-prometheus-mark-walle-prometheus
---
# Source: prometheus/templates/alertmanager-configmap.yaml

---
# Source: prometheus/templates/alertmanager-deployment.yaml


---
# Source: prometheus/templates/alertmanager-ingress.yaml

---
# Source: prometheus/templates/alertmanager-networkpolicy.yaml

---
# Source: prometheus/templates/alertmanager-pvc.yaml

---
# Source: prometheus/templates/alertmanager-service-headless.yaml


---
# Source: prometheus/templates/alertmanager-service.yaml


---
# Source: prometheus/templates/alertmanager-serviceaccount.yaml

---
# Source: prometheus/templates/alertmanager-statefulset.yaml


---
# Source: prometheus/templates/kube-state-metrics-clusterrole.yaml


---
# Source: prometheus/templates/kube-state-metrics-clusterrolebinding.yaml

---
# Source: prometheus/templates/kube-state-metrics-deployment.yaml


---
# Source: prometheus/templates/kube-state-metrics-networkpolicy.yaml

---
# Source: prometheus/templates/kube-state-metrics-serviceaccount.yaml

---
# Source: prometheus/templates/kube-state-metrics-svc.yaml


---
# Source: prometheus/templates/node-exporter-daemonset.yaml

---
# Source: prometheus/templates/node-exporter-podsecuritypolicy.yaml


---
# Source: prometheus/templates/node-exporter-role.yaml


---
# Source: prometheus/templates/node-exporter-rolebinding.yaml


---
# Source: prometheus/templates/node-exporter-service.yaml

---
# Source: prometheus/templates/node-exporter-serviceaccount.yaml

---
# Source: prometheus/templates/pushgateway-deployment.yaml


---
# Source: prometheus/templates/pushgateway-ingress.yaml

---
# Source: prometheus/templates/pushgateway-pvc.yaml

---
# Source: prometheus/templates/pushgateway-service.yaml


---
# Source: prometheus/templates/pushgateway-serviceaccount.yaml

---
# Source: prometheus/templates/server-clusterrole.yaml


---
# Source: prometheus/templates/server-clusterrolebinding.yaml


---
# Source: prometheus/templates/server-ingress.yaml

---
# Source: prometheus/templates/server-networkpolicy.yaml


---
# Source: prometheus/templates/server-service-headless.yaml

---
# Source: prometheus/templates/server-serviceaccount.yaml


---
# Source: prometheus/templates/server-statefulset.yaml
